--- a/gb/18/12/20/n10921644.md
+++ b/gb/18/12/20/n10921644.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ppnfq298/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ppnfq298/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ppnfq298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南澳洞穴潜水员发现史前动物遗骸 专家惊羡</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/06/Industrial-and-Commercial-Bank-of-China-GettyImages-72258097-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2018年12月20日讯】（大纪元记者文韵澳洲阿德莱德编译报导）一名洞穴潜水员在<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>水下洞穴的黑暗深处，发现了澳洲史前时期的骨骼，该发现具有全球意义。</p>
+	<p>【大纪元2018年12月20日讯】（大纪元记者文韵澳洲阿德莱德编译报导）一名洞穴潜水员在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>水下洞穴的黑暗深处，发现了澳洲史前时期的骨骼，该发现具有全球意义。</p>
 <p>据澳广新闻（ABC）报导，在甘比亚山（Mount Gambier）最长和最大的洞穴系统中，发现了来自灭绝的巨型动物的颚骨和牙齿。具体位置是在位于距离私人土地上“坦克洞穴”入口约1公里处。这些被偶然发现的化石，已经在这里隐藏了数十万年。</p>
 <p>当地洞穴潜水员卡科斯基（Ryan Kaczkowski）说，当时他正在探索洞穴系统，偶然发现了这些骨头的遗存。他说：“这是一大堆骨头，它们散落在这个地方，我作了记录、拍照，并作了一些测量。”</p>
-<p>他将照片和记录细节发送给<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E5%8F%A4%E7%94%9F%E7%89%A9.md#1">古生物</a>学家，得到回复说这些骨头属于几种已灭绝的物种，包括短面袋鼠和袋狮（marsupial lion）。</p>
+<p>他将照片和记录细节发送给<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%A4%E7%94%9F%E7%89%A9.md#1">古生物</a>学家，得到回复说这些骨头属于几种已灭绝的物种，包括短面袋鼠和袋狮（marsupial lion）。</p>
 <p>卡科斯基说，在洞穴口附近发现骨头并不稀奇，但罕见的是这次发现是在洞穴深处。“这意味着这里曾经是个入口，很久很久以前或许是个坑洞或塌陷，并且是开口的，陆地动物也许在其中生活，或者是掉入里面，后来这里又被封闭了，所以里面有什么就都被保存下来，”他说，“显然从来没有任何人或动物进入过这里，所以突然看到那情景时，真是一种非常特殊的体验。”他说自己尽量小心不去移动骨头，而是对其位置和尺寸作了测量。</p>
-<h2>惊人发现羡煞<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E5%8F%A4%E7%94%9F%E7%89%A9.md#1">古生物</a>学家</h2>
+<h2>惊人发现羡煞<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%A4%E7%94%9F%E7%89%A9.md#1">古生物</a>学家</h2>
 <p>卡科斯基在发现骨头后的做法，受到了格里菲斯大学（Griffith University）洞穴潜水员和古生物学家路易斯（Julien Louys）的称赞。</p>
 <p>“最好是留它们在原地，以便专业人员进行评估并找出取出这些化石的最佳方法，这样我们就不会丢失任何科学信息，”路易斯博士说，“不管发现化石的洞穴是干燥还是潮湿，或是露天，只要脱离了被发现时的环境，就会丢失大量的信息。”</p>
 <p>路易斯博士说，这一发现“特别有意义”，因为这很明显是灭种巨型动物群的遗存。“在这些被淹没的洞穴中比较常见骨头遗存，但多数情况下都比较近代——我们指的是过去几千年左右。”他说，“不仅澳洲，就是全世界而言，在这些洪水洞穴中发现这么古老的物质，都是非常罕见的。”</p>
@@ -18,7 +18,7 @@
 <h2>发现或许持续不断</h2>
 <p>在化石中发现的物种之一——袋狮（又称Thylacoleo carnifex），是更新世（Pleistocene）时期澳洲最大的肉食哺乳动物。</p>
 <p>袋狮是一种伏击捕食者，巨大的利剪般的牙齿，与拇指爪一起使用，意味着它也可以轻而易举地捕杀体型更大的猎物。</p>
-<p>阿德莱德大学古生物学家李德（Liz Reed）的工作基地是被列入世界遗产名录的Naracoorte洞穴。她说在<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>东南部发现了许多这类化石。“我经常开玩笑说，Naracoorte洞穴是袋狮的全球总部，在这里的发现，比世界任何其它地方都多。”</p>
+<p>阿德莱德大学古生物学家李德（Liz Reed）的工作基地是被列入世界遗产名录的Naracoorte洞穴。她说在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>东南部发现了许多这类化石。“我经常开玩笑说，Naracoorte洞穴是袋狮的全球总部，在这里的发现，比世界任何其它地方都多。”</p>
 <p>澳洲洞穴潜水协会（The Cave Diving Association of Australia）正在申请拨款，以挖掘和保护该遗址。</p>
 <p>卡科斯基很兴奋再次穿上他的潜水服，回到当天惊人发现的现场。“我认为总有更多可能性，这也是这项运动的乐趣。在这里已知的潜水点有数百个，我们等待探索，”他说，“新发现将持续不断。”</p>
 <p>责任编辑：陈紫雨</p>
@@ -27,36 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/13/6/14/n3893941.md#1">科学家首次在澳洲远古化石鱼身上发现腹肌</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/8/3/n4495077.md#1">南澳展出价值百万元澳宝</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/2/26/n4648572.md#1">南澳博物馆获捐赠澳宝 价值100多万</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/11/3/n8456350.md#1">澳洲考古学家南澳发现4.9万年前岩石洞穴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/6/14/n3893941.md#1">科学家首次在澳洲远古化石鱼身上发现腹肌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/3/n4495077.md#1">南澳展出价值百万元澳宝</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/26/n4648572.md#1">南澳博物馆获捐赠澳宝 价值100多万</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/3/n8456350.md#1">澳洲考古学家南澳发现4.9万年前岩石洞穴</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/9/n9940966.md#1" target="_blank">高天韵：《共产主义的终极目的》是救世神书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168723.md#1">大陆储户巨额存款频消失 涉事银行说法惹议</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168584.md#1">疑中共施压 传郝海东儿子被球队解雇</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168203.md#1">韩国瑜败选 国民党疏远中共 吁台湾第一</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168590.md#1">中共文件曝光 当局规定党员20条“不准”</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168949.md#1">与孙俪结婚9周年 邓超晒全家剪影照庆祝</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167705.md#1">演唱会遭恶搞 黄明志兑现承诺：赚的捐出去</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167867.md#1">完成吴朋奉罢韩遗愿 网友悼念：可安心走了</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/14/4/13/n4130520.md#1">米开朗基罗（11）《最后的审判》（上）</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167819.md#1">睡觉时停止呼吸 美国男子看到无数天使唱歌</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/4/n12159714.md#1">面纱下的真相 霍乱中的觉醒</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ppnfq298/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ppnfq298/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/20/n10921644.htm">南澳洞穴潜水员发现史前动物遗骸 专家惊羡</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/20/n10921644.htm">南澳洞穴潜水员发现史前动物遗骸 专家惊羡</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ppnfq298/djy/blob/master/gb/18/12/20/n10921644.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ppnfq298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ppnfq298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/12/20/n10921644.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
